--- a/CLIP_and_PASTE.ipynb
+++ b/CLIP_and_PASTE.ipynb
@@ -11,6 +11,51 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **CLIP and PASTE: Using AI to Create Photo Collages from Text Prompts**\n",
+        "## How to use ML models to extract objects from photographs and rearrange them to create modern art\n",
+        "\n",
+        "![CLIPandPadte Cover Image](https://raw.githubusercontent.com/robgon-art/CLIPandPASTE/main/cover%20shot%20mid.jpg)\n",
+        "\n",
+        "**By Robert. A Gonsalves**</br>\n",
+        "\n",
+        "You can see my article on Medium.\n",
+        "\n",
+        "The source code and generated images are released under the [CC BY-SA license](https://creativecommons.org/licenses/by-sa/4.0/).</br>\n",
+        "![CC BYC-SA](https://licensebuttons.net/l/by-sa/3.0/88x31.png)\n",
+        "\n",
+        "## Google Colabs\n",
+        "* [CLIP and PASTE](https://colab.research.google.com/github/robgon-art/CLIPandPASTE/blob/main/CLIP_and_PASTE.ipynb)\n",
+        "\n",
+        "## Acknowledgements\n",
+        "- CLIP by A. Radford et al., Learning Transferable Visual Models From Natural Language Supervision (2021)\n",
+        "- F. Boudin, PKE: An Open-Source Python-based Keyphrase Extraction Toolkit (2016), Proceedings of COLING 2016, the 26th International Conference on Computational Linguistics: System Demonstrations\n",
+        "- Wikimedia Commons (2004-present)\n",
+        "- OpenImages (2020)\n",
+        "- GRoIE by L. Rossi, A. Karimi, and A. Prati, A Novel Region of Interest Extraction Layer for Instance Segmentation (2020)\n",
+        "- D. P. Kingma and J. Lei Ba, Adam: A Method for Stochastic Optimization (2015), The International Conference on Learning Representations 2015\n",
+        "- M. Grootendorst, KeyBERT: Minimal keyword extraction with BERT (2020)\n",
+        "- E. Riba, D. Mishkin, D. Ponsa, E. Rublee, and G. Bradski, Kornia: an Open Source Differentiable Computer Vision Library for PyTorch (2020), Winter Conference on Applications of Computer Vision\n",
+        "\n",
+        "## Citation\n",
+        "To cite this repository:\n",
+        "\n",
+        "```bibtex\n",
+        "@software{CLIP and PASTE,\n",
+        "  author  = {Gonsalves, Robert A.},\n",
+        "  title   = {CLIP and PASTE: Using AI to Create Photo Collages from Text Prompts},\n",
+        "  url     = {https://github.com/robgon-art/CLIPandPAST},\n",
+        "  year    = 2022,\n",
+        "  month   = June\n",
+        "}\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "5XEbqN5n8RQx"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -19,7 +64,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title\n",
+        "#@title Initialize the System\n",
         "!pip install kornia\n",
         "!pip install ftfy\n",
         "!pip install git+https://github.com/openai/CLIP.git --no-deps\n",
@@ -174,11 +219,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "3lhlBo_vmJHk"
+        "id": "3lhlBo_vmJHk",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
-        "prompt = \"penguins skiing down a snowy mountain\" #@param {type:\"string\"}\n",
+        "#@title Find Source Images\n",
+        "prompt = \"eating bowls of ice cream under a rainbow\" #@param {type:\"string\"}\n",
         "prompt = prompt.lower()\n",
         "num_keywords = 10\n",
         "\n",
@@ -527,6 +574,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Create Layouts"
+      ],
+      "metadata": {
+        "id": "jYv7Wb0n8oU5"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -534,7 +590,6 @@
       },
       "outputs": [],
       "source": [
-        "#@title\n",
         "num_initial_layouts = 100\n",
         "num_ctrl_ponts = 5\n",
         "init_rand_amount = 0.25\n",
@@ -627,6 +682,15 @@
         "plt.axis('off')\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Optimize Layouts"
+      ],
+      "metadata": {
+        "id": "kfCX25-I8wic"
+      }
     },
     {
       "cell_type": "code",
@@ -730,6 +794,15 @@
         "    plt.axis('off')\n",
         "    plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Display High Resolution Image"
+      ],
+      "metadata": {
+        "id": "clcqdd3p83J-"
+      }
     },
     {
       "cell_type": "code",
